--- a/views/index.ejs
+++ b/views/index.ejs
@@ -194,14 +194,8 @@
         </div>
       </div>
       <div class="testimonial-nav">
-        <button class="prev-btn">
-          <i class="fas fa-chevron-left"></i>
-          <span class="sr-only">‹</span>
-        </button>
-        <button class="next-btn">
-          <i class="fas fa-chevron-right"></i>
-          <span class="sr-only">›</span>
-        </button>
+        <button class="prev-btn">‹</button>
+        <button class="next-btn">›</button>
       </div>
     </div>
   </section>
